--- a/cover.css
+++ b/cover.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-image: url("bg.jpg");
 
 }
 body {
@@ -165,7 +165,7 @@ ul li:hover {
 
 /* When clicked on, add a background color and strike out text */
 ul li.checked {
-    background: #888;
+    background: rgb(196, 181, 186);
     color: #fff;
     text-decoration: line-through;
 }
@@ -189,6 +189,7 @@ ul li.checked::before {
     position: absolute;
     right: 0;
     top: 0;
+    color: rgb(44, 56, 42);
     padding: 12px 16px 12px 16px;
 }
 
@@ -226,7 +227,7 @@ input {
 .addBtn {
     padding: 10px;
     width: 25%;
-    background: #d9d9d9;
+    background: rgb(158, 142, 153);
     color: #555;
     float: left;
     text-align: center;
