--- a/cover.css
+++ b/cover.css
@@ -189,7 +189,7 @@ ul li.checked::before {
     position: absolute;
     right: 0;
     top: 0;
-    color: rgb(44, 56, 42);
+    color: rgb(34, 87, 79);
     padding: 12px 16px 12px 16px;
 }
 
@@ -228,7 +228,7 @@ input {
     padding: 10px;
     width: 25%;
     background: rgb(158, 142, 153);
-    color: #555;
+    color: white;
     float: left;
     text-align: center;
     font-size: 16px;
