--- a/cover.css
+++ b/cover.css
@@ -74,6 +74,7 @@ body {
 
 .masthead-nav > li {
   display: inline-block;
+  cursor: default;
 }
 .masthead-nav > li + li {
   margin-left: 20px;
@@ -82,6 +83,7 @@ body {
   padding-right: 0;
   padding-left: 0;
   font-size: 16px;
+  cursor: default;
   font-weight: bold;
   color: #fff; /* IE8 proofing */
   color: rgba(255,255,255,.75);
@@ -100,9 +102,6 @@ body {
   border-bottom-color: #fff;
 }
 
-#menu {
-
-}
 
 @media (min-width: 768px) {
   .masthead-brand {
@@ -157,7 +156,6 @@ ul li {
 ul li:nth-child(odd) {
     background: #333;
 }
-
 /* Darker background-color on hover */
 ul li:hover {
     background: #ddd;
